--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,13 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.121.3",
+    "fastparquet>=2024.11.0",
     "geoalchemy2>=0.18.1",
     "geopandas>=1.1.1",
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
     "psycopg2-binary>=2.9.11",
+    "pyarrow>=22.0.0",
     "pydantic-settings>=2.12.0",
     "pyyaml>=6.0.3",
     "shapely>=2.1.2",
